@@ -1,8 +1,13 @@
+
+2007-02-27  Martin Kutschker  <martin.t.kutschker@blackbox.net>
+
+	* Fixed bug #3666: permissions of versioned pages are not changed in draft workspace (patch by Andreas Wolf)
+
 2007-02-27  Ingo Renner  <typo3@ingo-renner.com>
 
 	* Fixed bug: Cannot return from Quickedit mode
 
-2007-02-20  Dmitry Dulepov  <dmitry@typo3.org>
+2007-02-26  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Better fix for bug #5032: [LocalLang: 0?]DEF is sometimes displayed for content elements
 
